--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,3 +15,8 @@ dependencies:
 dev_dependencies:
   test: ^1.0.0
   pedantic: ^1.9.0
+
+dependency_overrides:
+  pointycastle:
+    git:
+      url: git://github.com/cochainio/pointycastle
